# Text_Extractor

./: README.md  index.py  pyproject.toml
