[project]
name = "text-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "Kartik Pandey",email = "kartikpandey596@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.43.1,<2.0.0)",
    "validators (>=0.34.0,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
